Update ShareWith to apply patch directly within POJO and updates request object parser
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>